<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_main"
            app:layout_collapseMode="pin"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardHost"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/cardGuest">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/host_guideline_25"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/host_guideline_50"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/host_guideline_75"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.75"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/baseline_host_24"
                    app:layout_constraintTop_toTopOf="@id/host_guideline_25"
                    app:layout_constraintBottom_toBottomOf="@id/host_guideline_25"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/hostTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_host_title"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    app:layout_constraintTop_toTopOf="@id/host_guideline_50"
                    app:layout_constraintBottom_toBottomOf="@id/host_guideline_50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/hostSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_host_subtitle"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    app:layout_constraintTop_toTopOf="@id/host_guideline_75"
                    app:layout_constraintBottom_toBottomOf="@id/host_guideline_75"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardGuest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@id/cardHost"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guest_guideline_25"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guest_guideline_50"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guest_guideline_75"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.75"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/baseline_guest_24"
                    app:layout_constraintTop_toTopOf="@id/guest_guideline_25"
                    app:layout_constraintBottom_toBottomOf="@id/guest_guideline_25"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/guestTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_guest_title"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    app:layout_constraintTop_toTopOf="@id/guest_guideline_50"
                    app:layout_constraintBottom_toBottomOf="@id/guest_guideline_50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/guestSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_guest_subtitle"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    app:layout_constraintTop_toTopOf="@id/guest_guideline_75"
                    app:layout_constraintBottom_toBottomOf="@id/guest_guideline_75"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>